force-app/main/default/objects/Invoice__c/fields/mode__c.field-meta.xml
<CustomField>
    <fullName>mode__c</fullName>
    <label>mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>