force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aadhar_Card_Number__c</columns>
    <columns>Languages__c</columns>
    <columns>Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>