force-app/main/default/objects/Invoice__c/listViews/Payment.listView-meta.xml
<ListView>
    <fullName>Payment</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Payment__c</field>
        <operation>greaterOrEqual</operation>
        <value>240</value>
    </filters>
    <label>Payment</label>
</ListView>